Fork alignment